crates/analyzer/tests/snapshots/errors__string_constructor_two_type_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `String` expects 1 generic argument, but 2 were provided
  ┌─ [snippet]:3:3
  │
3 │   String<1, u8>()
  │   ^^^^^^ -  -- supplied 2 generic arguments
  │   │          
  │   expects 1 generic argument


